# lux

./: CMakeLists.txt  LICENSE  README.md
images/: cornell_box_64_samples.ppm
src/core/: bounds2.h  camera.cpp  camera.h  error.h  filter.cpp  filter.h  integrator.cpp  integrator.h  mat4.h  material.cpp  material.h  math.h  pixel_sampler.cpp  pixel_sampler.h  ray.h  rgb_spectrum.cpp  rgb_spectrum.h  rng.h  sampler.cpp  sampler.h  scene.cpp  scene.h  shape.h  transform.cpp  transform.h  util.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/integrators/: path_tracer.cpp  path_tracer.h
src/main/: main.cpp  main.h
src/materials/: lambertian.h  mirror.cpp  mirror.h
src/samplers/: random.cpp  random.h  stratified.cpp  stratified.h
src/shapes/: sphere.cpp  sphere.h  triangle.cpp  triangle.h
